create & test `Add` button

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <h2 data-aos="fade-up">Add Something...</h2>
             <form action="#" class="form-search d-flex align-items-stretch mb-3" data-aos="fade-up"
               data-aos-delay="200">
-              <input type="text" class="form-control" placeholder="Your ZIP code or City. e.g. New York">
-              <button type="submit" class="btn btn-primary">Search</button>
+              <input type="text" class="form-control" placeholder="Title">
+              <button id="add-button" type="submit" onclick = "add_buttonClicked()" class="btn btn-primary">Add</button>
             </form>
 
             <div class="row gy-4" data-aos="fade-up" data-aos-delay="300">
@@ -800,6 +800,7 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/script.js"></script>
 
 </body>
 
