--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
+  <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body class="index-page">
@@ -143,7 +143,7 @@
 
     </section><!-- /Featured Services Section -->
 
-    
+
     <!-- Services Section -->
     <section id="services" class="services section">
 
