`complete` table adds

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h2 class="sitename">Mahdi Momeni</h2>
+        <h2 class="sitename">Hi Mahdi</h2>
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -102,8 +102,7 @@
 
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
-                  <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="0"
-                    class="purecounter">0</span>
+                  <span id="completed-counter">0</span>
                   <p>Completed</p>
                 </div>
               </div><!-- End Stats Item -->
@@ -132,6 +131,15 @@
             <div class="icon flex-shrink-0"></div>
             <div>
               <h1 class="title"><i class="fa fa-list-ol" aria-hidden="true"></i> Tasks</h1>
+              <ol id="tasks-table">
+              </ol>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon flex-shrink-0"></div>
+            <div>
+              <h1 class="title"><i class="fa fa-check" aria-hidden="true"></i> Completed</h1>
               <ol id="tasks-table">
               </ol>
             </div>
