--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
             <div class="icon flex-shrink-0"></div>
             <div>
               <h1 class="title"><i class="fa fa-list-ol" aria-hidden="true"></i> Tasks</h1>
-              <ol id="tasks-table">
-              </ol>
+              <ul id="tasks-table">
+              </ul>
             </div>
           </div><!-- End Service Item -->
 
@@ -140,8 +140,8 @@
             <div class="icon flex-shrink-0"></div>
             <div>
               <h1 class="title"><i class="fa fa-check" aria-hidden="true"></i> Completed</h1>
-              <ol id="tasks-table">
-              </ol>
+              <ul id="completed-table">
+              </ul>
             </div>
           </div><!-- End Service Item -->
 
